[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antimissilesim"
dynamic = ["version"]  # Version will be automatically determined
description = "A Python package for antimissile missile simulation"
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Matt", email = "matte773@gmail.com" }
]
requires-python = ">=3.8"

dependencies = [
    "scipy>=1.6.0",
    "numpy",
    "matplotlib", 
    "pytest",
    "pyyaml",
    "lark", 
    "colorama"
]

[tool.setuptools]
packages = ["antimissilesim"]

[project.scripts]
antimissilesim = "antimissilesim.cli:main"  # For the CLI command